# rominator

./: README.md
.github/workflows/: main.yml
rominator/: package.json
rominator/src/: App.tsx  main.tsx
rominator/src-tauri/: Cargo.toml  tauri.conf.json
rominator/src-tauri/src/: main.rs
rominator/src/downloader/: DownloadProvider.tsx  index.ts  types.ts
rominator/src/sources/: SourceProvider.tsx  index.ts  sources.ts  types.ts
rominator/src/sources/romspedia/: download.ts  index.ts  search.ts
rominator/src/style/: index.scss
rominator/src/style/views/: index.scss  search.scss
rominator/src/util/: platforms.ts
rominator/src/util/config/: ConfigProvider.tsx  index.ts  types.ts
rominator/src/util/plugins/: pluginTypes.ts
rominator/src/view/: SettingsModal.tsx  root.tsx
rominator/src/view/search/: SearchTab.tsx
