[package]
name = "rominator"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-all", "dialog-all", "path-all", "http-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
async_zip = { version = "0.0.17", features = ["full"] }
sanitize-filename = "0.5"
futures-lite = { version = "2.1.0", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, optional = false }
tokio-util = { version = "0.7", features = ["compat"], optional = false }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
